--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,20 +1,28 @@
 .navBar {
   display: flex;
+  align-items: center;
   background: #2c3e50;
-  padding: 1rem;
+  height:10vh;
+  padding: 0 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .navButton {
-  color: white;
+  background-color: #2c3e50 ;
   text-decoration: none;
   padding: 0.75rem 1.5rem;
-  margin: 0 0.5rem;
   border-radius: 4px;
+  border: none;
   font-weight: 500;
   transition: all 0.3s ease;
+  font-size: large;
+  flex: 1;
+  text-align: center;
 }
-
+.navButton a{
+  text-decoration: none;
+  color: white;
+}
 .navButton:hover {
   background: #4a6fa5;
   transform: translateY(-2px);
