--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,33 +1,34 @@
 .navBar {
   display: flex;
-  align-items: center;
-  background: #2c3e50;
-  height:10vh;
-  padding: 0 1rem;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #3498db;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  list-style: none;
+}
+.navBar a {
+  flex: 1; 
+  text-decoration: none;
+  text-align: center;
 }
 
 .navButton {
-  background-color: #2c3e50 ;
-  text-decoration: none;
-  padding: 0.75rem 1.5rem;
-  border-radius: 4px;
-  border: none;
+  width: 100%; 
   font-weight: 500;
-  transition: all 0.3s ease;
-  font-size: large;
-  flex: 1;
-  text-align: center;
-}
-.navButton a{
-  text-decoration: none;
+  padding: 1rem 0; 
+  background-color: #3498db;
   color: white;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
+
 .navButton:hover {
-  background: #4a6fa5;
-  transform: translateY(-2px);
+  background-color: #2980b9;
 }
 
 .navButton.active {
-  background: #3a5a8f;
+  background-color: #2980b9;
 }
