--- a/src/pages/BookFinding/BookFinding.css
+++ b/src/pages/BookFinding/BookFinding.css
@@ -1,7 +1,8 @@
 .book-finding-page {
   max-width: 80%;
   margin: 0 auto;
-  padding: 1rem;
+  padding-bottom: 6rem; 
+  padding-top: 2rem;
 }
 
 .page-title {
