--- a/src/pages/BookFinding/BookFinding.css
+++ b/src/pages/BookFinding/BookFinding.css
@@ -1,8 +1,8 @@
 .book-finding-page {
   max-width: 80%;
-  margin: 0 auto;
-  padding-bottom: 6rem; 
-  padding-top: 2rem;
+  margin: 2rem auto;
+  padding-bottom: 6rem;
+  padding-top: 2rem
 }
 
 .page-title {
